--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,6 +21,10 @@
   font-family: productSansThin;
   src: url(fonts/ProductSans-thin.ttf);
 }
+@font-face {
+  font-family: menloRegular;
+  src: url(fonts/Menlo-Regular.woff);
+}
 
 h1 {
   font-family: visitor;
@@ -39,17 +43,17 @@ h1, h2 {
   padding: 20px;
 }
 p {
-  font-family: productSansThin;
+  font-family: productSansReg;
   color: white;
-  /*margin-right: 65%;
+  /*margin-right: 65%;*/
   padding-left: 20px;
   padding-right: 20px;
   padding-top: 10px;
-  padding-bottom: 10px;*/
+  padding-bottom: 10px;
   /*padding: 10px 10px 20px 20px;*/
-  font-size: 18px;
+  font-size: 24px;
   /*text-align: left;*/
-  line-height: normal;
+
 }
 .top {
   background-color: #2A373E;
@@ -62,19 +66,25 @@ p {
 .center {
   display: block;
   margin: auto;
+  padding-bottom: 100px;
+  animation-name: rn-logo;
+  animation-duration: 4s;
 }
-.column {
-  float: left;
+.brief-summary {
   width: 25%;
-  padding: 5px;
+  height: 100px;
+  display: inline-block;
+  padding: 10px;
+  padding-right: 30px;
 }
+.img-section {
 
-.row::after {
-  content: "";
-  clear: both;
-  display: table;
+  display: inline-block;
+  padding: 30px;
 }
-
-.float {
-float: right;
+/*Animations*/
+@keyframes rn-logo {
+  0% {transform: rotate(0deg); margin-left: 0%;}
+  50% {transform: rotate(20deg); margin-left: 36%;}
+  100% {transform: rotate(0deg); margin: auto;}
 }
