finished the home, about, and store pages

--- a/styles/styles-home.css
+++ b/styles/styles-home.css
@@ -26,11 +26,41 @@
   src: url(fonts/Menlo-Regular.woff);
 }
 
-h1 {
-  font-family: visitor;
-  font-size: 100px;
-  text-align: center;
+/* Navigation Bar */
+
+div ul.nav {
+  list-style-type: none;
+  overflow: hidden;
+  background-color: #91C0D8;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
 }
+
+div ul li.nav {
+  float: left;
+}
+
+div ul li a.nav {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 20px 20px;
+  text-decoration: none;
+  font-family: productSansThin;
+  font-size: 20px;
+}
+
+div ul li a.nav:hover {
+	background-color: white;
+	color: gray;
+
+}
+
+/* Type Selectors */
+
 
 h2 {
   font-family: productSansBold;
@@ -42,6 +72,13 @@ h1, h2 {
   color: #91C0D8;
   padding: 20px;
 }
+h1 {
+  font-family: visitor;
+  font-size: 100px;
+  text-align: center;
+  padding-top: 80px;
+}
+
 p {
   font-family: productSansReg;
   color: white;
@@ -53,8 +90,10 @@ p {
   /*padding: 10px 10px 20px 20px;*/
   font-size: 24px;
   /*text-align: left;*/
-
 }
+
+/* Classes */
+
 .top {
   background-color: #2A373E;
 }
@@ -67,8 +106,10 @@ p {
   display: block;
   margin: auto;
   padding-bottom: 100px;
-  animation-name: rn-logo;
-  animation-duration: 4s;
+  
+}
+#robo-image {
+  padding-top: 50px;
 }
 .brief-summary {
   width: 25%;
