fixed productSansThin issue

--- a/styles/styles-about.css
+++ b/styles/styles-about.css
@@ -19,7 +19,7 @@
 }
 @font-face {
   font-family: productSansThin;
-  src: url(fonts/ProductSans-thin.ttf);
+  src: url(fonts/ProductSans-Thin.ttf);
 }
 @font-face {
   font-family: menloRegular;
