--- a/styles/styles-youtube.css
+++ b/styles/styles-youtube.css
@@ -23,6 +23,9 @@
   font-family: menloRegular;
   src: url(fonts/Menlo-Regular.woff);
 }
+body {
+  background-color: #2A373E;
+}
 
 /* Navigation Bar */
 
@@ -54,5 +57,40 @@ div ul li a.nav {
 div ul li a.nav:hover {
 	background-color: white;
 	color: gray;
+}
+/*iframe {
+  margin-top: 30%;
+  margin-right: 10%;
+  padding: 10px;
+}*/
+table {
+  margin: auto;
+  margin-top: 7%;
+  width: 75%;
+}
+td {
+  padding: 10px;
+}
+td:first-child {
+  padding-right: 100px;
+}
+td:nth-child(2) {
+  padding-left: 100px;
+}
+p { 
+  width: 75%;
+  color: white;
+  font-size: 125%;
+  font-family: productSansThin;
+}
+h1 {
+  margin-top: 9%;
+  text-align: center;
+  font-family: productSansBold;
+  color: #91C0D8;
 
+}
+iframe:hover {
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.25), 0 6px 20px 0 rgba(255, 255, 255, 0.25);
 }
