--- a/styles/styles-home.css
+++ b/styles/styles-home.css
@@ -27,36 +27,51 @@
 }
 
 /* Navigation Bar */
-
+.navigation {
+  background-color: #2A373E;
+}
 div ul.nav {
   list-style-type: none;
   overflow: hidden;
-  background-color: #91C0D8;
   position: fixed;
   top: 0;
   width: 100%;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-
+  background-color: #2A373E;
+}
+li > a {
+  position: relative;
+  text-decoration: none;
+}
+li > a.nav:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: white;
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
 }
 
-div ul li.nav {
-  float: left;
-}
-
-div ul li a.nav {
+ul li a.nav {
   display: block;
   color: white;
   text-align: center;
-  padding: 20px 20px;
+  padding: 20px;
   text-decoration: none;
-  font-family: productSansThin;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
   font-size: 20px;
 }
 
-div ul li a.nav:hover {
-	background-color: white;
-	color: gray;
-
+li > a.nav:hover:before {
+  visibility: visible;
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
 }
 
 /* Type Selectors */
@@ -80,7 +95,8 @@ h1 {
 }
 
 p {
-  font-family: productSansThin;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
   color: white;
   margin-right: 65%;
   padding-left: 20px;
@@ -107,15 +123,27 @@ img {
 /* Center Images */
 .center {
   display: block;
-  margin: auto;
   padding-bottom: 100px;
 
 }
 #robo-image {
   padding-top: 50px;
-  
+  margin: auto;
 }
+.floating {  
+    animation-name: floating;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    margin-left: 30px;
+    margin-top: 5px;
 
+}
+@keyframes floating {
+    from { transform: translate(0,  0px); }
+    65%  { transform: translate(0, 15px); }
+    to   { transform: translate(0, -0px); }    
+}
 /*Animations*/
 @keyframes rn-logo {
   0% {transform: rotate(0deg); margin-left: 0%;}
