--- a/styles/styles-youtube.css
+++ b/styles/styles-youtube.css
@@ -8,18 +8,6 @@
   src: url(fonts/visitor1.ttf);
 }
 @font-face {
-  font-family: productSansBold;
-  src: url(fonts/ProductSans-Bold.ttf);
-}
-@font-face {
-  font-family: productSansReg;
-  src: url(fonts/ProductSans-Regular.ttf);
-}
-@font-face {
-  font-family: productSansThin;
-  src: url(fonts/ProductSans-Thin.ttf);
-}
-@font-face {
   font-family: menloRegular;
   src: url(fonts/Menlo-Regular.woff);
 }
@@ -29,34 +17,67 @@ body {
 
 /* Navigation Bar */
 
+.navigation {
+  background-color: #2A373E;
+}
+
 div ul.nav {
   list-style-type: none;
   overflow: hidden;
-  background-color: #91C0D8;
   position: fixed;
   top: 0;
   width: 100%;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  background-color: #2A373E;
+}
+
+div ul.nav {
+  list-style-type: none;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  width: 100%;
 
 }
 
-div ul li.nav {
+ul li.nav {
   float: left;
+
+}
+li > a {
+  position: relative;
+  color: #000;
+  text-decoration: none;
+}
+li > a.nav:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: white;
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
 }
 
-div ul li a.nav {
+ul li a.nav {
   display: block;
   color: white;
   text-align: center;
-  padding: 20px 20px;
+  padding: 20px;
   text-decoration: none;
-  font-family: productSansThin;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
   font-size: 20px;
 }
 
-div ul li a.nav:hover {
-	background-color: white;
-	color: gray;
+li > a.nav:hover:before {
+  visibility: visible;
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
 }
 table {
   margin: auto;
@@ -76,14 +97,21 @@ p {
   width: 80%;
   color: white;
   font-size: 125%;
-  font-family: productSansThin;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
 }
 h1 {
   margin-top: 9%;
   text-align: center;
-  font-family: productSansBold;
+  font-family: 'Roboto', sans-serif;
   color: #91C0D8;
 
+}
+h2 {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  color: #91C0D8;
+  text-align: center;
 }
 iframe:hover {
   background-color: white;
