--- a/projects/smart-display/styles.css
+++ b/projects/smart-display/styles.css
@@ -5,7 +5,7 @@
 html {
 	width: 100%;
 	height: 100%;
-	background-image: url("images/smart-screen-rn.png");
+	background-image: url("images/smart-screen-rn.png"); // put your own background image
 	background-repeat: no-repeat;
 	background-position: center;
 }
