--- a/styles/styles-about.css
+++ b/styles/styles-about.css
@@ -10,11 +10,6 @@
   src: url(fonts/visitor1.ttf);
 }
 
-@font-face {
-  font-family: menloRegular;
-  src: url(fonts/Menlo-Regular.woff);
-}
-
 /* Navigation Bar */
 .navigation {
   background-color: #2A373E;
@@ -89,7 +84,7 @@ p {
 body {
   background-color: #2A373E;
 }
-a {
+a, a:hover {
   text-decoration: underline;
   color: #91C0D8;
 }
@@ -97,3 +92,4 @@ a:visited {
   text-decoration: underline;
   color: #91C0D8
 }
+
