--- a/styles/styles-youtube.css
+++ b/styles/styles-youtube.css
@@ -7,10 +7,7 @@
   font-family: visitor;
   src: url(fonts/visitor1.ttf);
 }
-@font-face {
-  font-family: menloRegular;
-  src: url(fonts/Menlo-Regular.woff);
-}
+
 body {
   background-color: #2A373E;
 }
@@ -102,6 +99,7 @@ p {
 }
 h1 {
   margin-top: 9%;
+  padding-bottom: 30px;
   text-align: center;
   font-family: 'Roboto', sans-serif;
   color: #91C0D8;
@@ -113,7 +111,61 @@ h2 {
   color: #91C0D8;
   text-align: center;
 }
-iframe:hover {
+
+.code {
   background-color: white;
-  box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.25), 0 6px 20px 0 rgba(255, 255, 255, 0.25);
+  color: gray;
+  display: inline-block;
+  width: max-content;
+  height: max-content;
+  margin-left: 3%;
+  border-radius: 5px;
 }
+.code a {
+  text-align: center;
+  padding: 23px;
+  font-size: 200%;
+  color: #91C0D8;
+  text-decoration: none;
+}
+.code a {
+  position: relative;
+}
+a:after,
+a:before {
+  -webkit-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out;
+}
+  .code a:before {
+    color: #fa0;
+    content: '[';
+    color: gray;
+    display: block;
+    font-size: 1.5em;
+    left: 30px;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+  }
+  .code a:after {
+    color: #fa0;
+    content: ']';
+    color: gray;
+    display: block;
+    font-size: 1.5em;
+    opacity: 0;
+    position: absolute;
+    right: 30px;
+    top: 0;
+  }
+  .code a:hover:before {
+    left: 5px;
+    opacity: 1;
+  }
+  .code a:hover:after {
+    opacity: 1;
+    right: 5px;
+  } 
+  .code a:hover {
+    background: trasnparent;
+  }
