--- a/styles/styles-youtube.css
+++ b/styles/styles-youtube.css
@@ -138,7 +138,7 @@ a:before {
 }
   .code a:before {
     color: #fa0;
-    content: '[';
+    content: '{';
     color: gray;
     display: block;
     font-size: 1.5em;
@@ -149,7 +149,7 @@ a:before {
   }
   .code a:after {
     color: #fa0;
-    content: ']';
+    content: '}';
     color: gray;
     display: block;
     font-size: 1.5em;
