--- a/styles/styles-youtube.css
+++ b/styles/styles-youtube.css
@@ -101,9 +101,9 @@ h1 {
   margin-top: 9%;
   padding-bottom: 30px;
   text-align: center;
-  font-family: 'Roboto', sans-serif;
+  font-family: visitor;
+  font-size: 400%;
   color: #91C0D8;
-
 }
 h2 {
   font-family: 'Roboto', sans-serif;
